Using List.of()