@@ -44,7 +44,7 @@ class MailServiceTest {
         // given
 
         // when
-        target.sendMail(userEmail, Collections.emptyList(), true);
+        target.sendMail(userEmail, List.of(), true);
 
         // then
     }
@@ -76,10 +76,10 @@ class MailServiceTest {
     }
 
     private List<Quiz> quizList() {
-        return Arrays.asList(
-                quiz(QuizCategory.JAVA, Collections.singletonList(QuizLevel.JUNIOR)),
-                quiz(QuizCategory.DATABASE, Arrays.asList(QuizLevel.JUNIOR, QuizLevel.SENIOR)),
-                quiz(QuizCategory.SPRING, Arrays.asList(QuizLevel.JUNIOR, QuizLevel.SENIOR, QuizLevel.NEW))
+        return List.of(
+                quiz(QuizCategory.JAVA, List.of(QuizLevel.JUNIOR)),
+                quiz(QuizCategory.DATABASE, List.of(QuizLevel.JUNIOR, QuizLevel.SENIOR)),
+                quiz(QuizCategory.SPRING, List.of(QuizLevel.JUNIOR, QuizLevel.SENIOR, QuizLevel.NEW))
         );
     }
 
